# mp-kmeans

./: .gitattributes  README.md  S-sets.ipynb  pyproject.toml
src/: mp_kmeans.py  test_kmeans_precision.py
src/mp_kmeans/: __init__.py  clustering.py  euclidean_cuda.py
src/mp_kmeans.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
